2005-07-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/videofilter/Makefile.am:
	* gst/videofilter/gstgamma.c: (gst_gamma_setup):
	* gst/videofilter/gstvideobalance.c: (gst_videobalance_setup):
	* gst/videofilter/gstvideofilter.c: (gst_videofilter_class_init),
	(gst_videofilter_getcaps), (gst_videofilter_setcaps),
	(gst_videofilter_init), (gst_videofilter_chain),
	(gst_videofilter_set_property), (gst_videofilter_get_property),
	(gst_videofilter_setup), (gst_videofilter_class_add_pad_templates):
	* gst/videofilter/gstvideofilter.h:
	* gst/videofilter/gstvideoflip.c: (gst_videoflip_init),
	(gst_videoflip_set_property), (gst_videoflip_get_property),
	(plugin_init), (gst_videoflip_setup), (gst_videoflip_planar411):
	  forward port from 0.9 and enable videoflip now that it works

2005-07-23  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* gst/silence/Makefile.am:
	* gst/silence/gstsilence.h:
	* gst/silence/gstsilence.c:
	Ported silence to 0.9 using GstBaseSrc ... 180 lines :)

2005-07-22  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/mad/gstmad.c: (gst_mad_src_event):
	  First try forwarding events, makes seeking in AVI files with mp3
	  audio work again.

2005-07-20  Andy Wingo  <wingo@pobox.com>

	* ext/mpeg2dec/gstmpeg2dec.c (gst_mpeg2dec_sink_event): Signedness
	fix.

2005-07-20  Edward Hervey  <edward@fluendo.com>

	* configure.ac: 
	* gst/wavparse/gstwavparse.c: 
	* gst/wavparse/gstwavparse.h:
	* gst/wavparse/Makefile.am:
	Ported wavparse to 0.9 . Playing, seeking and state changes work.
	Could need more loving on the headers though.

2005-07-20  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.ac:
	* ext/Makefile.am:
	* ext/gconf/Makefile.am:
	* ext/gconf/gconf.c: (gst_bin_find_unconnected_pad),
	(gst_gconf_render_bin_from_description),
	(gst_gconf_get_default_video_sink):
	* ext/gconf/gstgconfaudiosink.c: (gst_gconf_audio_sink_base_init),
	(gst_gconf_audio_sink_class_init), (gst_gconf_audio_sink_dispose),